[package]
name = "dependent-map"
version = "0.1.0"
authors = ["Martin Molzer <worldsbegin@gmx.de>"]
description = "A safe and convenient store for one or multiple values for each type"
documentation = "https://docs.rs/dependent-map"
#homepage = "https://github.com/worldsender/dependent-map"
repository = "https://github.com/worldsender/dependent-map"
readme = "README.md"
keywords = ["container", "data-structure", "map"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
hashbrown = { version = "^0.11", features = ["raw"] }
dyn-clone = "^1.0.4"

[build-dependencies]
rustversion = "^1.0.5"

[dev-dependencies]
criterion = "0.3"

[features]
default = []
unstable_features = []

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true
